Basic shared memory ring buffer tests